--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 					<ul class="section__facts">
 						<li class="section__facts-item">
 							<h3 class="section__facts-title">Lovely paths</h3>
-							<span class="section__facts-detail">Caspian sea in Kazakhstan</span>
+							<span class="section__facts-detail">Just testing out this edit</span>
 						</li>
 						<li class="section__facts-item">
 							<h3 class="section__facts-title">Haunted ways</h3>
