--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
 				<section class="section">
 					<div class="section__content">
 						<h2 class="section__title">Lakes</h2>
-						<p class="section__description"><span class="section__description-inner">A lake is an area filled with water, localized in a basin, that is surrounded by land, apart from any river or other outlet that serves to feed or drain the lake. Lakes lie on land and are not part of the ocean.</span></p>
+						<p class="section__description"><span class="section__description-inner">A lake is an area filled with water, 
+								localized in a basin, that is surrounded by land,
+								apart from any river or other outlet that serves to feed or drain the lake. Lakes lie on land and are not part of the ocean.</span></p>
 					</div>
 					<div class="section__img">
 						<div class="section__img-inner" style="background-image: url(img/2.jpg)"></div>
